# scaffold

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.base.yaml  docker-compose.override.yaml  docker-compose.yaml
databases/postgres/: Dockerfile  init_db.sh
databases/redis/: Dockerfile
docs/tickets/: 000-scaffold-template-strategy.md  001-remove-business-logic.md  002-rename-standardize.md  003-setup-script-and-template.md  README.md
scaffold_api/: .dockerignore  .env.example  AGENTS.md  README.md  alembic.ini  api.dockerfile  pyproject.toml  setup.cfg
scaffold_api/app/: __init__.py  backend_pre_start.py  main.py  utils.py
scaffold_api/app/adapters/files/: file_storage_port.py  gcs_adapter.py  sync_gcs_adapter.py
scaffold_api/app/api/api_v1/: api.py
scaffold_api/app/api/api_v1/routers/: __init__.py  login_ep.py  users_ep.py
scaffold_api/app/core/: auth.py  cache.py  config.py  email.py  memory.py  security.py
scaffold_api/app/db/: session.py  utils.py
scaffold_api/app/db/crud/: base_crud.py  user_crud.py
scaffold_api/app/db/migrations/: env.py
scaffold_api/app/db/migrations/versions/: 2025_09_29_1918-c4dfd1888465_create_initial_tables.py
scaffold_api/app/db/models/: base.py  user.py
scaffold_api/app/db/setup/: cli.py  create_db.py  export_data.py  init_db.py  populate.py  repopulate_data.py
scaffold_api/app/db/setup/seed_data/: seed_users.py
scaffold_api/app/dependencies/: base_deps.py  db_deps.py  storage_deps.py  user_deps.py
scaffold_api/app/email-templates/src/: footer.mjml  new_account.mjml  reset_password.mjml
scaffold_api/app/exceptions/: __init__.py  base_exc.py  handlers.py
scaffold_api/app/providers/files/: file_storage_protocol.py  gcs_provider.py  sync_gcs_provider.py
scaffold_api/app/schemas/: __init__.py  auth_schemas.py  base_schema.py  exception_schemas.py  msg_schemas.py  user_schemas.py
scaffold_api/app/services/: __init__.py  auth_serv.py  user_serv.py
scaffold_api/app/tasks/: user_tasks.py
scaffold_api/configurations/: dev_config.toml  local_config.toml  prod_config.toml
scaffold_api/entry/api/: prestart.sh  start.sh
scaffold_api/lib/: date_utils.py  enums.py  fields.py
scaffold_api/reporting/: logging.py
scaffold_api/tests/: conftest.py  docker-compose.yaml
scaffold_api/tests/factories/: __init__.py  base.py  user.py
scaffold_api/tests/fixtures/: user_fixtures.py
scaffold_api/tests/integration_tests/api/api_v1/: test_login_ep.py  test_users_ep.py
scaffold_api/tests/unit_tests/core/: test_auth_provider.py
scaffold_api/tests/unit_tests/crud/: test_user_crud.py
scaffold_api/tests/unit_tests/db/setup/: __init__.py  test_cli.py
scaffold_api/tests/unit_tests/dependencies/: test_user_deps.py
scaffold_api/tests/unit_tests/services/: test_auth_serv.py
scaffold_api/tests/unit_tests/tasks/: test_user_tasks.py
scaffold_api/tests/utils/: db.py  user.py  utils.py  vcr_utils.py
scaffold_frontend/: .dockerignore  .env.development  .env.example  .env.mobile.example  .gitignore  .prettierignore  AGENTS.md  FENOTES.txt  LICENSE  README.md  components.json  contentlayer.config.js  eslint.config.mjs  frontend.dockerfile  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
scaffold_frontend/public/: offline.html  site.webmanifest  sw.js
scaffold_frontend/scripts/: check-node-version.sh
scaffold_frontend/src/: auth.config.ts  auth.ts  instrumentation.ts  proxy.ts  revalidate-cache.js
scaffold_frontend/src/api/: base-api.ts  user-api.ts
scaffold_frontend/src/app/: error.tsx  layout.tsx  manifest.ts  robots.ts
scaffold_frontend/src/app/(app)/: layout.tsx
scaffold_frontend/src/app/(marketing)/: layout.tsx  page.tsx
scaffold_frontend/src/components/: button-scroll-to-bottom.tsx  callout.tsx  consent-aware-analytics.tsx  cookie-consent-banner.tsx  external-link.tsx  google-analytics-provider.tsx  password-reset-form.tsx  password-update-form.tsx  search.tsx  sidebar-toggle.tsx  theme-provider.tsx  theme-toggle.tsx  user-account-settings.tsx  user-auth-form-footer.tsx  user-auth-form.tsx  user-auth-heading.tsx  user-avatar.tsx  user-name-form.tsx  user-security-settings.tsx  verify-email-form.tsx
scaffold_frontend/src/components/app/: app-nav-main.tsx  app-nav-user.tsx  app-sidebar.tsx
scaffold_frontend/src/components/auth/: Auth.module.css  auth-form-credentials-login.tsx  auth-form-credentials-register.tsx  auth-form-credentials.module.css  signout-button.tsx
scaffold_frontend/src/components/dashboard/: dash-sidebar.tsx
scaffold_frontend/src/components/layout/: dropdown-nav.tsx  main-nav.tsx  mode-toggle.tsx  page-header.tsx  shell.tsx  sidebar-nav.tsx  site-footer.tsx  user-account-nav.tsx
scaffold_frontend/src/components/marketing/: feature-cards.tsx  marketing-heading.tsx  marketing-intro-text.tsx
scaffold_frontend/src/components/pwa/: install-prompt.tsx  service-worker-registration.tsx
scaffold_frontend/src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  border-gradient-settle.tsx  breadcrumb.tsx  button.tsx  card-hover-effect.tsx  card-svg-hover-effect.tsx  card.tsx  combobox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  icons-2.tsx  icons.tsx  input.tsx  loading.tsx  logo-border-magic.tsx  logo-hover-border-gradient.tsx  navigation-menu.tsx  radio-group.tsx  safe-image.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  table.tsx  (+11 more)
scaffold_frontend/src/config/: account.ts  app.ts  dashboard.ts  marketing.ts  site.ts
scaffold_frontend/src/env/: schema.mjs  server.mjs
scaffold_frontend/src/hooks/: auth-messages.ts  use-auth.ts  use-breadcrumbs.tsx  use-copy-to-clipboard.tsx  use-dimensions.tsx  use-local-storage.ts  use-mobile-command-input.ts  use-mobile.tsx  use-should-animate.ts
scaffold_frontend/src/lib/: api.ts  errors.ts  fonts.ts  sonner-toast.ts
scaffold_frontend/src/providers/: swr-provider.tsx
scaffold_frontend/src/styles/: globals.css
scaffold_frontend/src/types/: api.d.ts  auth.d.ts  user.d.ts
scripts/: rename-project.sh
(+38 files in other folders)
